--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -503,9 +503,15 @@ html {
 }
 
 .pets__title {
-  max-width: 33.33333%;
+  min-width: 33.33333%;
   margin: 0 auto;
   padding: 76px 0 60px 0;
+}
+
+@media (max-width: 1086px) {
+  .pets__title {
+    min-width: 56.49718%;
+  }
 }
 
 .pets__slider {
@@ -521,15 +527,24 @@ html {
 .pets__left-button {
   min-width: 52px;
   min-height: 52px;
-  border: 2px solid #F1CDB3;
+  border: 2px solid #f1cdb3;
   border-radius: 100px;
   -webkit-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .pets__left-button:hover {
   cursor: pointer;
-  background-color: #F1CDB3;
+  background-color: #f1cdb3;
 }
 
 .pets__items {
@@ -544,6 +559,14 @@ html {
   margin-right: 53px;
 }
 
+@media (max-width: 1086px) {
+  .pets__items {
+    margin-left: 12px;
+    margin-right: 12px;
+    gap: 40px;
+  }
+}
+
 .pets__item {
   min-width: 22.5%;
   background-color: #fafafa;
@@ -554,15 +577,24 @@ html {
 
 .pets__item:hover {
   cursor: pointer;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
 }
 
 .pets__item:hover .pets__button a {
-  background-color: #F1CDB3;
+  background-color: #f1cdb3;
 }
 
 .pets__item__button {
-  background-color: #CDCDCD;
+  background-color: #cdcdcd;
+}
+
+@media (max-width: 1086px) {
+  .pets__item {
+    min-width: 38.13559%;
+  }
+  .pets__item:last-child {
+    display: none;
+  }
 }
 
 .pets__img img {
@@ -595,6 +627,12 @@ html {
   color: #545454;
 }
 
+@media (max-width: 1086px) {
+  .pets__name {
+    margin: 20px 0 30px 0;
+  }
+}
+
 .pets__button {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -614,7 +652,7 @@ html {
 .pets__right-button {
   min-width: 52px;
   min-height: 52px;
-  border: 2px solid #F1CDB3;
+  border: 2px solid #f1cdb3;
   border-radius: 100px;
   -webkit-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
@@ -622,7 +660,7 @@ html {
 
 .pets__right-button:hover {
   cursor: pointer;
-  background-color: #F1CDB3;
+  background-color: #f1cdb3;
 }
 
 .pets__main-button {
@@ -635,11 +673,27 @@ html {
   margin-bottom: 100px;
 }
 
+.help__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
 .help__title {
-  width: 26.66667%;
+  min-width: 26.66667%;
   margin: 0 auto;
   padding: 80px 0 60px 0;
   letter-spacing: 0.06em;
+}
+
+@media (max-width: 992px) {
+  .help__title {
+    min-width: 43.50282%;
+  }
 }
 
 .help__list {
@@ -660,6 +714,13 @@ html {
   margin-bottom: 100px;
 }
 
+@media (max-width: 992px) {
+  .help__list {
+    -webkit-column-gap: 60px;
+            column-gap: 60px;
+  }
+}
+
 .help__item {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -674,6 +735,14 @@ html {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+@media (max-width: 992px) {
+  .help__item {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 170px;
+            flex: 0 1 170px;
+  }
 }
 
 .help__img {
@@ -718,12 +787,38 @@ html {
   padding: 80px 0 90px 0;
 }
 
+@media (max-width: 992px) {
+  .donation__two-columns {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    row-gap: 60px;
+  }
+}
+
 .donation__img {
   max-width: 42.08333%;
 }
 
+@media (max-width: 992px) {
+  .donation__img {
+    max-width: 71.32768%;
+  }
+}
+
+.donation__img img {
+  width: 100%;
+}
+
 .donation__content {
   max-width: 31.66667%;
+}
+
+@media (max-width: 992px) {
+  .donation__content {
+    max-width: 53.67232%;
+  }
 }
 
 .donation__title {
@@ -747,19 +842,25 @@ html {
   letter-spacing: 0.06em;
   /* color-dark-l */
   color: #545454;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
 }
 
 .donation__card-number {
-  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  min-width: 349px;
   font-family: "Georgia";
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
   line-height: 115%;
   /* identical to box height, or 23px */
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -767,7 +868,7 @@ html {
   letter-spacing: 0.06em;
   /* color-dark-l */
   color: #545454;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
   background: #f1cdb3;
   border-radius: 9px;
   padding: 10px 15px;
@@ -789,6 +890,9 @@ html {
           align-items: center;
   /* color-dark-m */
   color: #b2b2b2;
+}
+
+.donation__description:not(:last-child) {
   margin-bottom: 20px;
 }
 
@@ -808,6 +912,62 @@ html {
       -ms-flex-align: center;
           align-items: center;
   margin-top: 40px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+@media (max-width: 992px) {
+  .footer__three-columns {
+    margin-top: 18px;
+    padding: 0 34px;
+  }
+}
+
+.footer__column a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-right: 30px;
+}
+
+@media (max-width: 992px) {
+  .footer__column:first-child {
+    margin-top: 15px;
+    margin-right: 30px;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 44%;
+            flex: 0 1 44%;
+  }
+  .footer__column:first-child .footer__second-column-item {
+    padding-right: 40px;
+  }
+}
+
+@media (max-width: 992px) {
+  .footer__column:nth-child(2) {
+    margin-top: 15px;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 47%;
+            flex: 0 1 47%;
+  }
+  .footer__column:nth-child(2) .footer__first-column-item {
+    padding-right: 5px;
+  }
+  .footer__column:nth-child(2) .footer__column-title {
+    margin-bottom: 30px;
+  }
+  .footer__column:nth-child(2) .footer__first-column-item {
+    margin-bottom: 30px;
+  }
+}
+
+@media (max-width: 992px) {
+  .footer__column:last-child {
+    margin: 0 auto;
+  }
 }
 
 .footer__column-title {
@@ -824,7 +984,6 @@ html {
 }
 
 .footer__first-column-item {
-  display: block;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -856,14 +1015,12 @@ html {
 }
 
 .footer__second-column-item {
-  display: block;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  position: relative;
   font-family: "Georgia";
   font-style: normal;
   font-weight: 400;
