--- a/shelter/pages/main/style.scss
+++ b/shelter/pages/main/style.scss
@@ -34,8 +34,9 @@ $bp5: 320;
   padding: 0 40px;
   @media (max-width: $bp3+px) {
     & {
-    max-width: 708px;
-    padding: 0 30px;
+      max-width: 708px;
+
+      padding: 0 30px;
     }
   }
 }
@@ -43,7 +44,6 @@ $bp5: 320;
 .main {
   flex: 1 1 auto;
 }
-
 
 .header {
   background: linear-gradient(to right, #5b483a, #262425);
@@ -56,7 +56,7 @@ $bp5: 320;
     height: 60px;
     margin-top: 60px;
     margin-bottom: 60px;
-    @media (max-width: $bp1+px)  {
+    @media (max-width: $bp1+px) {
       margin-top: 30px;
     }
   }
@@ -143,7 +143,7 @@ $bp5: 320;
     color: #cdcdcd;
     transition: all 0.3s ease 0s;
     &:hover {
-      cursor:pointer;
+      cursor: pointer;
     }
   }
 }
@@ -156,7 +156,6 @@ $bp5: 320;
 @mixin flexColumn() {
   display: flex;
   flex-direction: column;
-  
 }
 
 .start-screen {
@@ -167,7 +166,7 @@ $bp5: 320;
     display: flex;
     justify-content: space-between;
     width: 100%;
-    
+
     @media (max-width: $bp3+px) {
       width: 100%;
       flex-direction: column;
@@ -179,19 +178,17 @@ $bp5: 320;
 
   // .start-screen__content
   &__content {
-    
     @include flexColumn();
     // justify-content: space-around;
     // max-width: 460/1200 * 100%;
     width: 460/1200 * 100%;
-   
+
     // flex: 1 0 (460/1200) * 100%;
     margin-top: 163px;
     margin-right: 42px;
     // margin-bottom: 243px;
     padding: 0;
     @media (max-width: $bp2+px) {
-      
       margin-top: 120px;
     }
     @media (max-width: $bp3+px) {
@@ -203,7 +200,6 @@ $bp5: 320;
   }
   // .start-screen__title
   &__title {
-    
     margin-bottom: 0px;
     font-family: "Georgia";
     font-weight: 400;
@@ -217,7 +213,6 @@ $bp5: 320;
     /* color-light-xl */
 
     color: #ffffff;
-    
   }
   // .start-screen__description
   &__description {
@@ -256,19 +251,17 @@ $bp5: 320;
     // height: ;
     width: (698/1200) * 100%;
     margin-bottom: 0;
-   
+
     height: 728px;
-    @media (max-width:$bp1+px) {
+    @media (max-width: $bp1+px) {
       height: (728/1200) * 100%;
     }
 
-   
     img {
       width: 100%;
       height: 100%;
-      
+
       object-fit: contain;
-     
     }
     @media (max-width: $bp3+px) {
       & {
@@ -279,7 +272,6 @@ $bp5: 320;
     }
   }
 }
-
 
 .about-the-shelter {
   // .about-the-shelter__two-columns
@@ -306,7 +298,6 @@ $bp5: 320;
     @media (max-width: $bp3+px) {
       padding: 0;
       width: (430/708) * 100%;
-      
     }
   }
   // .about-the-shelter__title
@@ -364,13 +355,15 @@ $bp5: 320;
   }
 
   &__title {
-    max-width: (400/1200) * 100%;
+    min-width: (400/1200) * 100%;
     margin: 0 auto;
     padding: 76px 0 60px 0;
+    @media (max-width: $bp2+px) {
+      min-width: (400/708) * 100%;
+    }
   }
   // .pets__slider
   &__slider {
-    
     display: flex;
 
     align-items: center;
@@ -380,12 +373,15 @@ $bp5: 320;
   &__left-button {
     min-width: 52px;
     min-height: 52px;
-    border: 2px solid #F1CDB3;
+    border: 2px solid #f1cdb3;
     border-radius: 100px;
     transition: all 0.3s ease 0s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     &:hover {
       cursor: pointer;
-      background-color: #F1CDB3;
+      background-color: #f1cdb3;
     }
   }
   // .pets__items
@@ -395,6 +391,11 @@ $bp5: 320;
     gap: 90px;
     margin-left: 53px;
     margin-right: 53px;
+    @media (max-width: $bp2+px) {
+      margin-left: 12px;
+      margin-right: 12px;
+      gap: 40px;
+    }
   }
   // .pets__item
   &__item {
@@ -404,15 +405,20 @@ $bp5: 320;
     border-radius: 10px;
     &:hover {
       cursor: pointer;
-      background-color: #FFFFFF;
+      background-color: #ffffff;
       .pets__button a {
-        background-color: #F1CDB3;
+        background-color: #f1cdb3;
       }
     }
     &__button {
-      background-color: #CDCDCD;
+      background-color: #cdcdcd;
     }
-    
+    @media (max-width: $bp2+px) {
+      min-width: (270/708) * 100%;
+      &:last-child {
+        display: none;
+      }
+    }
   }
   // .pets__img
   &__img {
@@ -441,6 +447,9 @@ $bp5: 320;
     /* color-dark-l */
 
     color: #545454;
+    @media (max-width: $bp2+px) {
+      margin: 20px 0 30px 0;
+    }
   }
   // .pets__button
   &__button {
@@ -458,12 +467,13 @@ $bp5: 320;
   &__right-button {
     min-width: 52px;
     min-height: 52px;
-    border: 2px solid #F1CDB3;
+
+    border: 2px solid #f1cdb3;
     border-radius: 100px;
     transition: all 0.3s ease 0s;
     &:hover {
       cursor: pointer;
-      background-color: #F1CDB3;
+      background-color: #f1cdb3;
     }
   }
 
@@ -476,14 +486,20 @@ $bp5: 320;
 
 .help {
   // .help__title
+  &__container {
+    @include flexColumn();
+  }
 
   &__title {
-    width: (320/1200) * 100%;
+    min-width: (320/1200) * 100%;
     margin: 0 auto;
     padding: 80px 0 60px 0;
     // padding-left: 50px;
     // text-align: center;
     letter-spacing: 0.06em;
+    @media (max-width: $bp3+px) {
+      min-width: (308/708) * 100%;
+    }
   }
   // .help__list
   &__list {
@@ -494,8 +510,10 @@ $bp5: 320;
     row-gap: 55px;
     flex-wrap: wrap;
     margin-bottom: 100px;
-    // padding: 0 87px;
-    // padding-left: 50px;
+    @media (max-width: $bp3+px) {
+      // padding: 0 38px;
+      column-gap: 60px;
+    }
   }
   // .help__item
   &__item {
@@ -503,6 +521,9 @@ $bp5: 320;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    @media (max-width: $bp3+px) {
+      flex: 0 1 170px;
+    }
   }
 
   // .help__img
@@ -541,15 +562,29 @@ $bp5: 320;
     align-items: center;
     column-gap: 30px;
     padding: 80px 0 90px 0;
+
+    @media (max-width: $bp3+px) {
+      flex-direction: column-reverse;
+      row-gap: 60px;
+    }
   }
   // .donation__img
   &__img {
     // padding: 0px 0 11px 0;
     max-width: (505/1200) * 100%;
+    @media (max-width: $bp3+px) {
+      max-width: (505/708) * 100%;
+    }
+    & img {
+      width: 100%;
+    }
   }
   // .donation__content
   &__content {
     max-width: (380/1200) * 100%;
+    @media (max-width: $bp3+px) {
+      max-width: (380/708) * 100%;
+    }
   }
   // .donation__title
   &__title {
@@ -572,11 +607,15 @@ $bp5: 320;
     /* color-dark-l */
 
     color: #545454;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
   }
   // .donation__card-number
   &__card-number {
-    position: relative;
+    display: flex;
+    justify-content: space-between;
+
+    box-sizing: border-box;
+    min-width: 349px;
     font-family: "Georgia";
     font-style: normal;
     font-weight: 400;
@@ -591,7 +630,7 @@ $bp5: 320;
     /* color-dark-l */
 
     color: #545454;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
     background: #f1cdb3;
     border-radius: 9px;
     padding: 10px 15px;
@@ -612,7 +651,9 @@ $bp5: 320;
     /* color-dark-m */
 
     color: #b2b2b2;
-    margin-bottom: 20px;
+    &:not(:last-child) {
+      margin-bottom: 20px;
+    }
   }
 }
 
@@ -627,11 +668,55 @@ $bp5: 320;
     justify-content: space-between;
     align-items: center;
     margin-top: 40px;
-    
+    flex-wrap: wrap;
+    @media (max-width: $bp3+px) {
+      margin-top: 18px;
+      padding: 0 34px;
+    }
   }
   // .footer__column
   &__column {
+    & a {
+      display: flex;
+      justify-content: space-between;
+      padding-right: 30px;
+    }
+
+    &:first-child {
+      @media (max-width: $bp3+px) {
+        margin-top: 15px;
+        margin-right: 30px;
+        flex: 0 1 44%;
+        .footer__second-column-item {
+          padding-right: 40px;
+        }
+      }
+    }
+    &:nth-child(2) {
+      
+      @media (max-width: $bp3+px) {
+        .footer__first-column-item {
+          padding-right: 5px;
+        }
+        
+        margin-top: 15px;
+          flex: 0 1 47%;
+        .footer__column-title {
+          margin-bottom: 30px;
+        }
+        .footer__first-column-item {
+          margin-bottom: 30px;
+        }
+        
+      }
+    }
+    &:last-child {
+      
+      @media (max-width: $bp3+px) {
+        margin: 0 auto;
+      }
   }
+}
   // .footer__column-title
   &__column-title {
     // margin-top: 16px;
@@ -651,12 +736,11 @@ $bp5: 320;
   }
   // .footer__first-column-item
   &__first-column-item {
-    display: block;
     display: flex;
     align-items: center;
-    
+
     margin-bottom: 44px;
-   
+
     font-family: "Georgia";
     font-style: normal;
     font-weight: 400;
@@ -676,20 +760,19 @@ $bp5: 320;
       font-size: 20px;
       line-height: 115%;
       /* identical to box height, or 23px */
-  
+
       letter-spacing: 0.06em;
-  
+
       /* color-primary */
-  
+
       color: #f1cdb3;
     }
   }
   // .footer__second-column-item
   &__second-column-item {
-    display: block;
     display: flex;
     align-items: center;
-    position: relative;
+
     font-family: "Georgia";
     font-style: normal;
     font-weight: 400;
@@ -710,13 +793,12 @@ $bp5: 320;
       font-size: 20px;
       line-height: 115%;
       /* identical to box height, or 23px */
-  
+
       letter-spacing: 0.06em;
-  
+
       /* color-primary */
-  
+
       color: #f1cdb3;
     }
   }
 }
-
