--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -219,6 +219,40 @@ html {
   margin-left: auto;
 }
 
+@media (max-width: 767px) {
+  .header__menu {
+    display: none;
+  }
+}
+
+.burger {
+  display: none;
+}
+
+@media (max-width: 767px) {
+  .burger {
+    width: 32px;
+    height: 22px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin-left: 43px;
+  }
+  .burger__line {
+    display: block;
+    width: 100%;
+    height: 2px;
+    background-color: #f1cdb3;
+  }
+}
+
 .menu__list {
   display: -webkit-box;
   display: -ms-flexbox;
