--- a/shelter/pages/main/style.scss
+++ b/shelter/pages/main/style.scss
@@ -102,8 +102,34 @@ $bp5: 320;
   // .header__menu
   &__menu {
     margin-left: auto;
+    @media (max-width: $bp4+px) {
+      display: none;
+    }
+  }
+  &__burger {
+   
   }
 }
+
+.burger {
+  display: none;
+  @media (max-width: $bp4+px) {
+  width: 32px;
+  height: 22px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-left: 43px;
+  // .burger__line
+  &__line {
+    display: block;
+    width: 100%;
+    height: 2px;
+    background-color: #f1cdb3;
+  }
+}
+}
+
 .menu {
   // .menu__list
   &__list {
@@ -146,11 +172,6 @@ $bp5: 320;
       cursor: pointer;
     }
   }
-}
-
-.main {
-}
-.main-of-main-page {
 }
 
 @mixin flexColumn() {
@@ -693,30 +714,27 @@ $bp5: 320;
       }
     }
     &:nth-child(2) {
-      
       @media (max-width: $bp3+px) {
         .footer__first-column-item {
           padding-right: 5px;
         }
-        
+
         margin-top: 15px;
-          flex: 0 1 47%;
+        flex: 0 1 47%;
         .footer__column-title {
           margin-bottom: 30px;
         }
         .footer__first-column-item {
           margin-bottom: 30px;
         }
-        
       }
     }
     &:last-child {
-      
       @media (max-width: $bp3+px) {
         margin: 0 auto;
       }
+    }
   }
-}
   // .footer__column-title
   &__column-title {
     // margin-top: 16px;
