--- a/shelter/pages/pets/style.css
+++ b/shelter/pages/pets/style.css
@@ -123,9 +123,24 @@ html {
 }
 
 .container {
-  width: 1200px;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 0 40px;
+  overflow: hidden;
+}
+
+@media (max-width: 992px) {
+  .container {
+    max-width: 708px;
+    padding: 0 30px;
+  }
+}
+
+@media (max-width: 767px) {
+  .container {
+    max-width: none;
+    padding: 0 10px;
+  }
 }
 
 .main {
@@ -201,6 +216,45 @@ html {
   margin-left: auto;
 }
 
+@media (max-width: 767px) {
+  .header__menu {
+    display: none;
+  }
+}
+
+@media (max-width: 767px) {
+  .header__burger {
+    margin-right: 43px;
+  }
+}
+
+.burger {
+  display: none;
+}
+
+@media (max-width: 767px) {
+  .burger {
+    width: 30px;
+    height: 22px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .burger__line {
+    display: block;
+    width: 100%;
+    height: 2px;
+    background-color: #545454;
+  }
+}
+
 .menu__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -230,8 +284,6 @@ html {
   font-weight: 400;
   font-size: 15px;
   line-height: 160%;
-  /* identical to box height, or 24px */
-  /* color-dark-s */
   color: #545454;
   -webkit-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
@@ -257,9 +309,144 @@ html {
       -ms-flex-align: center;
           align-items: center;
   margin-top: 40px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+@media (max-width: 992px) {
+  .footer__three-columns {
+    margin-top: 18px;
+    padding: 0 34px;
+  }
+}
+
+@media (max-width: 767px) {
+  .footer__three-columns {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media (max-width: 320px) {
+  .footer__three-columns {
+    padding: 0;
+  }
+}
+
+.footer__column a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-right: 30px;
+}
+
+@media (max-width: 320px) {
+  .footer__column a {
+    padding-right: 0;
+  }
+}
+
+@media (max-width: 992px) {
+  .footer__column:first-child {
+    margin-top: 15px;
+    margin-right: 30px;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 44%;
+            flex: 0 1 44%;
+  }
+  .footer__column:first-child .footer__second-column-item {
+    padding-right: 40px;
+  }
+}
+
+@media (max-width: 992px) {
+  .footer__column:first-child {
+    margin-top: 15px;
+    margin-right: 30px;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 44%;
+            flex: 0 1 44%;
+  }
+  .footer__column:first-child .footer__second-column-item {
+    padding-right: 40px;
+  }
+}
+
+@media (max-width: 992px) and (max-width: 320px) {
+  .footer__column:first-child .footer__second-column-item {
+    padding-right: 0;
+  }
+}
+
+@media (max-width: 992px) and (max-width: 320px) {
+  .footer__column:first-child {
+    padding-right: 0;
+  }
+}
+
+@media (max-width: 992px) {
+  .footer__column:first-child {
+    margin-top: 0px;
+    margin-right: 0px;
+  }
+}
+
+.footer__column:nth-child(2) {
+  margin-top: 10px;
+}
+
+.footer__column:nth-child(2) .footer__column-title {
+  margin-bottom: 30px;
+}
+
+.footer__column:nth-child(2) .footer__first-column-item {
+  margin-bottom: 30px;
+}
+
+@media (max-width: 992px) {
+  .footer__column:nth-child(2) {
+    margin-top: 15px;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 47%;
+            flex: 0 1 47%;
+  }
+  .footer__column:nth-child(2) .footer__first-column-item {
+    padding-right: 5px;
+  }
+}
+
+@media (max-width: 767px) {
+  .footer__column:nth-child(2) {
+    -webkit-box-flex: 0;
+        -ms-flex: none;
+            flex: none;
+  }
+}
+
+@media (max-width: 992px) {
+  .footer__column:last-child {
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 320px) {
+  .footer__column:last-child {
+    margin-top: 45px;
+    text-align: center;
+    width: 96.875%;
+  }
+}
+
+.footer__column:last-child img {
+  width: 100%;
 }
 
 .footer__column-title {
+  margin-top: 16px;
   margin-bottom: 40px;
   font-family: "Georgia";
   font-style: normal;
@@ -272,8 +459,15 @@ html {
   color: #ffffff;
 }
 
+@media (max-width: 320px) {
+  .footer__column-title {
+    font-size: 25px;
+    line-height: 130%;
+    text-align: center;
+  }
+}
+
 .footer__first-column-item {
-  display: block;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -292,6 +486,12 @@ html {
   color: #f1cdb3;
 }
 
+@media (max-width: 320px) {
+  .footer__first-column-item {
+    text-align: center;
+  }
+}
+
 .footer__first-column-item a {
   font-family: "Georgia";
   font-style: normal;
@@ -305,14 +505,12 @@ html {
 }
 
 .footer__second-column-item {
-  display: block;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  position: relative;
   font-family: "Georgia";
   font-style: normal;
   font-weight: 400;
@@ -323,6 +521,12 @@ html {
   /* color-primary */
   color: #f1cdb3;
   margin-bottom: 60px;
+}
+
+@media (max-width: 320px) {
+  .footer__second-column-item {
+    margin-bottom: 20px;
+  }
 }
 
 .footer__second-column-item a {
@@ -355,6 +559,18 @@ html {
   padding: 80px 0 100px 0;
 }
 
+@media (max-width: 1279px) {
+  .our-pets__container {
+    padding: 80px 0 75px 0;
+  }
+}
+
+@media (max-width: 320px) {
+  .our-pets__container {
+    padding: 40px 0 75px 0;
+  }
+}
+
 .our-pets__title {
   max-width: 33.33333%;
   margin: 0 auto 45px auto;
@@ -376,6 +592,18 @@ html {
   color: #545454;
 }
 
+@media (max-width: 768px) {
+  .our-pets__title {
+    max-width: 100%;
+    margin: 0 auto 30px auto;
+    font-size: 25px;
+    line-height: 130%;
+    /* or 32px */
+    text-align: center;
+    letter-spacing: 0.06em;
+  }
+}
+
 .our-pets__items {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -383,6 +611,9 @@ html {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 27px 30px;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
@@ -390,9 +621,26 @@ html {
   margin-bottom: 45px;
 }
 
+@media (max-width: 1279px) {
+  .our-pets__items {
+    padding: 0 64px;
+    gap: 30px 40px;
+    margin-bottom: 40px;
+  }
+}
+
+@media (max-width: 720px) {
+  .our-pets__items {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
 .our-pets__item {
+  border-radius: 9px;
   max-width: 22.5%;
-  background-color: #FAFAFA;
+  background-color: #fafafa;
   -webkit-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
@@ -403,7 +651,25 @@ html {
 }
 
 .our-pets__item:hover .our-pets__button a {
-  background-color: #F1CDB3;
+  background-color: #f1cdb3;
+}
+
+@media (max-width: 1279px) {
+  .our-pets__item:nth-child(7), .our-pets__item:last-child {
+    display: none;
+  }
+  .our-pets__item {
+    min-width: 270px;
+  }
+}
+
+@media (max-width: 720px) {
+  .our-pets__item:nth-child(4), .our-pets__item:nth-child(5), .our-pets__item:nth-child(6), .our-pets__item:nth-child(7), .our-pets__item:last-child {
+    display: none;
+  }
+  .our-pets__item {
+    min-width: 270px;
+  }
 }
 
 .our-pets__img img {
@@ -421,7 +687,7 @@ html {
   line-height: 23px;
   /* identical to box height */
   text-align: center;
-  margin: 25px 0 30px 0;
+  margin: 23px 0 30px 0;
   letter-spacing: 0.06em;
   /* color-dark-l */
   color: #545454;
@@ -442,5 +708,11 @@ html {
   display: -ms-flexbox;
   display: flex;
   gap: 20px;
+}
+
+@media (max-width: 767px) {
+  .our-pets__navigation {
+    gap: 10px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
