--- a/shelter/pages/pets/style.scss
+++ b/shelter/pages/pets/style.scss
@@ -21,11 +21,34 @@ body {
   // padding: 0 40px;
 }
 
+// =======================
+// break points
+$bp1: 1279;
+$bp2: 1086;
+$bp3: 992;
+$bp4: 767;
+$bp5: 320;
+
 .container {
-  width: 1200px;
+  max-width: 1200px;
 
   margin: 0 auto;
   padding: 0 40px;
+  @media (max-width: $bp3+px) {
+    & {
+      max-width: 708px;
+
+      padding: 0 30px;
+    }
+  }
+  overflow: hidden;
+  @media (max-width: $bp4+px) {
+    & {
+      max-width: none;
+
+      padding: 0 10px;
+    }
+  }
 }
 
 .main {
@@ -85,8 +108,42 @@ body {
   // .header__menu
   &__menu {
     margin-left: auto;
+    @media (max-width: $bp4+px) {
+      display: none;
+    }
+  }
+  &__burger {
+    @media (max-width: $bp4+px) {
+      margin-right: 43px;
+    }
   }
 }
+
+.burger {
+  display: none;
+  @media (max-width: $bp4+px) {
+    width: 30px;
+    height: 22px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    // margin-left: 43px;
+    // .burger__line
+    &__line {
+      display: block;
+      width: 100%;
+      height: 2px;
+      background-color: #545454;
+    }
+  }
+}
+
+@mixin flexColumn() {
+  display: flex;
+  flex-direction: column;
+}
+
+// ======
 .menu {
   // .menu__list
   &__list {
@@ -94,7 +151,7 @@ body {
     justify-content: space-between;
     align-items: center;
     list-style: none;
-    // *:first-child {
+    // :first-child {
 
     // }
     // flex-direction: column;
@@ -119,9 +176,6 @@ body {
     font-weight: 400;
     font-size: 15px;
     line-height: 160%;
-    /* identical to box height, or 24px */
-
-    /* color-dark-s */
 
     color: #545454;
     transition: all 0.3s ease 0s;
@@ -142,13 +196,95 @@ body {
     justify-content: space-between;
     align-items: center;
     margin-top: 40px;
+    flex-wrap: wrap;
+    @media (max-width: $bp3+px) {
+      margin-top: 18px;
+      padding: 0 34px;
+    }
+    @media (max-width: $bp4+px) {
+      justify-content: center;
+    }
+    @media (max-width: $bp5+px) {
+      padding: 0;
+    }
   }
   // .footer__column
   &__column {
+    & a {
+      display: flex;
+      justify-content: space-between;
+
+      padding-right: 30px;
+      @media (max-width: $bp5+px) {
+        padding-right: 0;
+      }
+    }
+
+    &:first-child {
+      @media (max-width: $bp3+px) {
+        margin-top: 15px;
+        margin-right: 30px;
+        flex: 0 1 44%;
+        .footer__second-column-item {
+          padding-right: 40px;
+        }
+      }
+      @media (max-width: $bp3+px) {
+        margin-top: 15px;
+        margin-right: 30px;
+        flex: 0 1 44%;
+        .footer__second-column-item {
+          padding-right: 40px;
+          @media (max-width: $bp5+px) {
+            padding-right: 0;
+          }
+        }
+        @media (max-width: $bp5+px) {
+          padding-right: 0;
+        }
+      }
+      @media (max-width: $bp3+px) {
+        margin-top: 0px;
+        margin-right: 0px;
+      }
+    }
+    &:nth-child(2) {
+      margin-top: 10px;
+      .footer__column-title {
+        margin-bottom: 30px;
+      }
+      .footer__first-column-item {
+        margin-bottom: 30px;
+      }
+      @media (max-width: $bp3+px) {
+        .footer__first-column-item {
+          padding-right: 5px;
+        }
+
+        margin-top: 15px;
+        flex: 0 1 47%;
+      }
+      @media (max-width: $bp4+px) {
+        flex: none;
+      }
+    }
+    &:last-child {
+      @media (max-width: $bp3+px) {
+        margin: 0 auto;
+      }
+      @media (max-width: $bp5+px) {
+        margin-top: 45px;
+        text-align: center;
+        width: (310/320) * 100%;
+      }
+      & img {
+        width: 100%;
+      }
+    }
   }
   // .footer__column-title
   &__column-title {
-    // margin-top: 16px;
+    margin-top: 16px;
     margin-bottom: 40px;
     font-family: "Georgia";
     font-style: normal;
@@ -162,10 +298,15 @@ body {
     /* color-light-xl */
 
     color: #ffffff;
+
+    @media (max-width: $bp5+px) {
+      font-size: 25px;
+      line-height: 130%;
+      text-align: center;
+    }
   }
   // .footer__first-column-item
   &__first-column-item {
-    display: block;
     display: flex;
     align-items: center;
 
@@ -183,6 +324,9 @@ body {
     /* color-primary */
 
     color: #f1cdb3;
+    @media (max-width: $bp5+px) {
+      text-align: center;
+    }
     a {
       font-family: "Georgia";
       font-style: normal;
@@ -200,10 +344,9 @@ body {
   }
   // .footer__second-column-item
   &__second-column-item {
-    display: block;
     display: flex;
     align-items: center;
-    position: relative;
+
     font-family: "Georgia";
     font-style: normal;
     font-weight: 400;
@@ -217,6 +360,9 @@ body {
 
     color: #f1cdb3;
     margin-bottom: 60px;
+    @media (max-width: $bp5+px) {
+      margin-bottom: 20px;
+    }
     a {
       font-family: "Georgia";
       font-style: normal;
@@ -242,6 +388,14 @@ body {
     flex-direction: column;
     align-items: center;
     padding: 80px 0 100px 0;
+    @media (max-width: $bp1+px) {
+      // max-width: (490/768) * 100%;
+      padding: 80px 0 75px 0;
+    }
+    @media (max-width: $bp5+px) {
+      // max-width: (490/768) * 100%;
+      padding: 40px 0 75px 0;
+    }
   }
   // .our-pets__title
   &__title {
@@ -263,26 +417,73 @@ body {
     /* color-dark-l */
 
     color: #545454;
+    @media (max-width: $bp4+1px) {
+      max-width: 100%;
+      margin: 0 auto 30px auto;
+      font-size: 25px;
+line-height: 130%;
+/* or 32px */
+
+text-align: center;
+letter-spacing: 0.06em;
+    }
+
+
+
   }
   // .our-pets__items
   &__items {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     gap: 27px 30px;
     flex-wrap: wrap;
     padding: 15px 0;
     margin-bottom: 45px;
+    @media (max-width: $bp1+px) {
+      padding: 0 64px;
+      gap: 30px 40px;
+      margin-bottom: 40px;
+    }
+    @media (max-width: 720px) {
+      justify-content: center;
+    }
   }
   // .our-pets__item
   &__item {
+    border-radius: 9px;
     max-width: (270/1200) * 100%;
-    background-color: #FAFAFA;
-    transition: all 0.3s ease 0s;    
+    background-color: #fafafa;
+    transition: all 0.3s ease 0s;
     &:hover {
       cursor: pointer;
       background-color: #ffffff;
       .our-pets__button a {
-        background-color: #F1CDB3;
+        background-color: #f1cdb3;
+      }
+    }
+    @media (max-width: $bp1+px) {
+      &:nth-child(7),
+      &:last-child {
+        display: none;
+      }
+
+      & {
+        min-width: 270px;
+      }
+    }
+
+    @media (max-width: 720px) {
+      &:nth-child(4),
+      &:nth-child(5),
+      &:nth-child(6),
+      &:nth-child(7),
+      &:last-child {
+        display: none;
+      }
+
+      & {
+        min-width: 270px;
       }
     }
   }
@@ -296,7 +497,6 @@ body {
   }
 
   &__name {
-    
     font-family: "Georgia";
     font-style: normal;
     font-weight: 400;
@@ -305,7 +505,7 @@ body {
     /* identical to box height */
 
     text-align: center;
-    margin: 25px 0 30px 0;
+    margin: 23px 0 30px 0;
     letter-spacing: 0.06em;
 
     /* color-dark-l */
@@ -322,6 +522,9 @@ body {
   &__navigation {
     display: flex;
     gap: 20px;
+    @media (max-width: $bp4+px) {
+      gap: 10px;
+    }
   }
 }
 .container {
